# learngit

./: CMakeLists.txt  cerestest.cpp  hello.ii  hello.s  helloworld.cc  helloworld.cpp  msg_manager.cpp  msg_manager.h  pararead.cpp  readme.md  readme.txt  test.cpp  test.txt
python_test/: hello_world.py  test.py
